# order-coffee

./: .clinerules  .gitignore  Cargo.toml  README.md  USAGE.md  install.sh  order-coffee.service
relaseNotes/: v2.md
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  responses.rs
src/services/: mod.rs  ollama.rs  services.rs  system.rs
src/state/: app_state.rs  mod.rs  system_state.rs  timer_state.rs
src/tasks/: mod.rs  suspension_timer.rs  wake_up_recovery.rs
src/utils/: mod.rs  signals.rs
