[package]
name = "order-coffee"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple HTTP server to prevent system sleep on Pop!_OS/Ubuntu"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
